<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoUsuarioActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_perfil"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/cadastro_trocar_foto"
            android:textColor="@color/deep_purple_500"/>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/lock_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:drawableTint="@color/deep_purple_500"
                style="@style/titulos_cadastro"
                android:text="@string/cadastro_dados_autenticacao"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/cadastro_email"
                style="@style/subtitulo">

                <EditText
                    android:id="@+id/edit_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/cadastro_senha"
                style="@style/subtitulo">

                <EditText
                    android:id="@+id/edit_senha"
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/person_24"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:drawableTint="@color/deep_purple_500"
                android:text="@string/cadastro_dados_pessoais"
                style="@style/titulos_cadastro"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/cadastro_nome"
                style="@style/subtitulo"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edit_nome"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/cadastro_profissao"
                style="@style/subtitulo"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edit_profissao"
                    android:inputType="textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/cadastro_altura"
                style="@style/subtitulo"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edit_altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/cadastro_data_nasc"
                style="@style/subtitulo"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edit_data_nasc"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="12dp"
                    android:inputType="date"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastro_sexo"
                android:layout_marginTop="8dp"
                style="@style/subtitulo"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cadastro_masculino"
                    style="@style/subtitulo"/>

                <RadioButton
                    android:id="@+id/radio_feminino"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cadastro_feminino"
                    style="@style/subtitulo"/>

            </RadioGroup>

        </LinearLayout>


    </ScrollView>


</LinearLayout>